--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     "andreas-weber/php-junit-merge":   "1.*@stable",
     "behat/behat":                     "2.*@stable",
     "cweagans/composer-patches":       "~1.0",
+    "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 ">=1.1.0@stable",
     "pheromone/phpcs-security-audit":  "dev-master",
     "phploc/phploc":                   ">=1.7.4@stable",
     "phpmd/phpmd":                     ">=1.4.0@stable",
     "phpunit/php-code-coverage":       ">=2.0.15@stable",
-    "phpunit/phpcov":                  "2.*@stable",
     "phpunit/php-token-stream":        ">=1.3.0@stable",
+    "phpunit/phpcov":                  "2.*@stable",
     "phpunit/phpunit":                 ">=3.7.1@stable",
     "sebastian/phpcpd":                ">=2.0.1@stable",
     "squizlabs/php_codesniffer":       "2.*@stable",
