--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "andreas-weber/php-junit-merge":   "1.*@stable",
     "behat/behat":                     "2.*@stable",
     "cweagans/composer-patches":       "~1.0",
+    "drush/drush":                     "~8@stable",
     "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 ">=1.1.0@stable",
     "pheromone/phpcs-security-audit":  "dev-master",
