--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 ">=1.1.0@stable",
     "pheromone/phpcs-security-audit":  "dev-master",
-    "phploc/phploc":                   ">=1.7.4@stable",
+    "phploc/phploc":                   "4.*@stable",
     "phpmd/phpmd":                     ">=1.4.0@stable",
     "phpunit/php-code-coverage":       ">=2.0.15@stable",
     "phpunit/php-token-stream":        ">=1.3.0@stable",
