--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
     "cweagans/composer-patches":       "~1.0",
     "drush/drush":                     "~8@stable",
     "jakub-onderka/php-parallel-lint": "*@dev",
-    "pdepend/pdepend":                 ">=1.1.0@stable",
+    "pdepend/pdepend":                 "2.*@stable",
     "pheromone/phpcs-security-audit":  "dev-master",
     "phploc/phploc":                   "4.*@stable",
-    "phpmd/phpmd":                     ">=1.4.0@stable",
-    "phpunit/php-code-coverage":       ">=2.0.15@stable",
-    "phpunit/php-token-stream":        ">=1.3.0@stable",
-    "phpunit/phpcov":                  "2.*@stable",
-    "phpunit/phpunit":                 ">=3.7.1@stable",
+    "phpmd/phpmd":                     "2.*@stable",
+    "phpunit/php-code-coverage":       "3.*@stable",
+    "phpunit/phpcov":                  "3.*@stable",
+    "phpunit/phpunit":                 "5.*@stable",
     "sebastian/phpcpd":                "3.*@stable",
     "squizlabs/php_codesniffer":       "2.*@stable",
     "vipsoft/code-coverage-extension": "2.*@dev"
@@ -28,8 +27,8 @@
   },
   "repositories": [
     {
-      "type": "vcs",
-      "url": "https://github.com/National-Theatre/drupal-phpunit.git"
+      "type": "git",
+      "url": "https://github.com/National-Theatre/drupal-phpunit"
     }
   ]
 }
