--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ before_install:
 install:
   - # $DRUSH qd --yes --no-server --root=docroot/ # @fixme
 script:
-  - ant -f base.xml composer -v
+  - ant -f base.xml lint
 after_script:
   - ant -f base.xml composer-show
