--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "minimum-stability": "dev",
   "config": {
-    "bin-dir": "bin/"
+    "bin-dir": "vendor/composer/bin"
   },
   "repositories": [
     {
