--- a/composer.json
+++ b/composer.json
@@ -4,21 +4,22 @@
   "license": "GPL",
   "keywords": [ "ant", "build", "php", "Drupal" ],
   "require": {
-    "NT/drupal-phpunit":               "dev-master",
+    "NT/drupal-phpunit":               "*@dev",
     "andreas-weber/php-junit-merge":   "1.*@stable",
     "behat/behat":                     "2.*@stable",
     "cweagans/composer-patches":       "~1.0",
     "drush/drush":                     "~8@stable",
     "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 "2.*@stable",
-    "pheromone/phpcs-security-audit":  "dev-master",
+    "pheromone/phpcs-security-audit":  "2.*@stable",
     "phploc/phploc":                   "4.*@stable",
     "phpmd/phpmd":                     "2.*@stable",
     "phpunit/php-code-coverage":       "3.*@stable",
     "phpunit/phpcov":                  "3.*@stable",
     "phpunit/phpunit":                 "5.*@stable",
+    "phpunit/phpunit-selenium":        ">=1.2@stable",
     "sebastian/phpcpd":                "3.*@stable",
-    "squizlabs/php_codesniffer":       "2.*@stable",
+    "squizlabs/php_codesniffer":       "3.*@stable",
     "vipsoft/code-coverage-extension": "2.*@dev"
   },
   "minimum-stability": "dev",
@@ -29,6 +30,10 @@
     {
       "type": "git",
       "url": "https://github.com/National-Theatre/drupal-phpunit"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/National-Theatre/GuzzleHttpMock.git"
     }
   ]
 }
