Adds drupal/coder via Composer

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "andreas-weber/php-junit-merge":   "1.*@stable",
     "behat/behat":                     "2.*@stable",
     "cweagans/composer-patches":       "~1.0",
-    "drush/drush":                     "~8@stable",
+    "drupal/coder":                    "^8@stable",
+    "drush/drush":                     "^8@stable",
     "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 "2.*@stable",
     "pheromone/phpcs-security-audit":  "2.*@stable",
