Downgrades PHP CodeSniffer due to Coder compatibility as per https://www.drupal.org/project/coder/issues/2809335

--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
     "andreas-weber/php-junit-merge":   "1.*@stable",
     "behat/behat":                     "2.*@stable",
     "cweagans/composer-patches":       "~1.0",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4",
     "drupal/coder":                    "^8@stable",
     "drush/drush":                     "^8@stable",
     "jakub-onderka/php-parallel-lint": "*@dev",
     "pdepend/pdepend":                 "2.*@stable",
-    "pheromone/phpcs-security-audit":  "2.*@stable",
+    "pheromone/phpcs-security-audit":  "1.*@stable",
     "phploc/phploc":                   "4.*@stable",
     "phpmd/phpmd":                     "2.*@stable",
     "phpunit/php-code-coverage":       "3.*@stable",
@@ -20,7 +21,7 @@
     "phpunit/phpunit":                 "5.*@stable",
     "phpunit/phpunit-selenium":        ">=1.2@stable",
     "sebastian/phpcpd":                "3.*@stable",
-    "squizlabs/php_codesniffer":       "3.*@stable",
+    "squizlabs/php_codesniffer":       "2.*@stable",
     "vipsoft/code-coverage-extension": "2.*@dev"
   },
   "minimum-stability": "dev",
