--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
     "squizlabs/php_codesniffer":       "2.*@stable",
     "vipsoft/code-coverage-extension": "2.*@dev"
   },
+  "require-dev": {
+    "NT/base-build-xml":               "*@dev"
+  },
   "minimum-stability": "dev",
   "config": {
     "bin-dir": "vendor/bin"
@@ -31,7 +34,11 @@
   "repositories": [
     {
       "type": "git",
-      "url": "https://github.com/National-Theatre/drupal-phpunit"
+      "url": "https://github.com/National-Theatre/base-build-xml.git"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/National-Theatre/drupal-phpunit.git"
     },
     {
       "type": "git",
