Improves version syntax

--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,23 @@
   "keywords": [ "ant", "build", "php", "Drupal" ],
   "require": {
     "NT/drupal-phpunit":               "dev-master",
-    "andreas-weber/php-junit-merge":   "1.*@stable",
-    "behat/behat":                     "2.*@stable",
-    "cweagans/composer-patches":       "~1.0",
+    "andreas-weber/php-junit-merge":   "^1@stable",
+    "behat/behat":                     "^2@stable",
+    "cweagans/composer-patches":       "^1@stable",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4",
     "drupal/coder":                    "^8@stable",
     "drush/drush":                     "^8@stable",
-    "jakub-onderka/php-parallel-lint": "*@dev",
-    "pdepend/pdepend":                 "2.*@stable",
-    "pheromone/phpcs-security-audit":  "1.*@stable",
-    "phploc/phploc":                   "4.*@stable",
-    "phpmd/phpmd":                     "2.*@stable",
-    "phpunit/phpcov":                  "4.*@stable",
-    "phpunit/phpunit":                 "^6.5@stable",
-    "phpunit/phpunit-selenium":        ">=1.2@stable",
-    "sebastian/phpcpd":                "3.*@stable",
-    "squizlabs/php_codesniffer":       "2.*@stable",
-    "vipsoft/code-coverage-extension": "2.*@dev"
+    "jakub-onderka/php-parallel-lint": "^1@stable",
+    "pdepend/pdepend":                 "^2@stable",
+    "pheromone/phpcs-security-audit":  "^1@stable",
+    "phploc/phploc":                   "^4@stable",
+    "phpmd/phpmd":                     "^2@stable",
+    "phpunit/phpcov":                  "^4@stable",
+    "phpunit/phpunit":                 "^6@stable",
+    "phpunit/phpunit-selenium":        "^1@stable",
+    "sebastian/phpcpd":                "^3@stable",
+    "squizlabs/php_codesniffer":       "^2@stable",
+    "vipsoft/code-coverage-extension": "^2@stable"
   },
   "minimum-stability": "dev",
   "config": {
